# vocus_api

./: .gitignore  LICENSE  README.md  api.py  poc.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
.github/workflows.notinuse/: python-app.yml
src/vocus_api/: vocus.py
tests/: test_vocuswrapper.py
vocus_api/: __init__.py  vocus.py
